# myWindowsApp

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  rockwidget.cpp  rockwidget.h
Data/: studybuttonrepository.cpp  studybuttonrepository.h
Helpers/: buttonhelpers.cpp  buttonhelpers.h
Models/: dogownerrating.cpp  dogownerrating.h  studybutton.h
